InvoiceForm: Fixed total section border alignments

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4967,3 +4967,4 @@ input[type=text]{
   .scroll-area {  max-height: 650px;  }
 }
 
+.invoice-total-right .new-invoice-footer-row:not(.invicetax) {  padding-bottom: 10px !important;  }
